--- a/css/style.css
+++ b/css/style.css
@@ -12818,3 +12818,8 @@ ol.commentlist li::after {
 .rev-hide-timer .tp-bannertimer{
 	display:none;
 }
+
+/* /////////////...........Btc minings............/////////// */
+.plan {
+	
+}
