--- a/css/skin/skin-1.css
+++ b/css/skin/skin-1.css
@@ -124,7 +124,7 @@ ol.list-num-count > li::before,
 .site-button:hover,
 .site-button:focus,
 .site-button:active {
-	background-color:#6337ce;
+	background-color:#dda42a;
 }
 
 /* other hex buttons bg color*/
