--- a/navbar.css
+++ b/navbar.css
@@ -1,3 +1,112 @@
 body{
-    height: ;
+
+}
+input[name="openNav"]{
+    display: none;
+}
+header{
+    display: flex;
+    width: 80%;
+    margin: 0 10%;
+}
+.logo{
+    width: 15%;
+}
+.logo img{
+    width: 60px;
+}
+.navbar{
+    width: 85%;
+    display: flex;
+    justify-content: right;
+}
+.navbar ul{
+    padding: 0;
+    margin: 0%;
+    list-style: none;
+    display: inline-block;
+}
+.navbar .otheroption{
+    width: 35%;
+    text-align: right;
+}
+.navbar .menu{
+    width: 80%;
+    text-align: center;
+}
+.navbar li{
+    padding: 15px;
+    display: inline-block;
+    transition: 0.5s;
+    position: relative;
+}
+.navbar li:hover{
+    background-color: #f7b933!important;
+}
+@media only screen and (max-width:768px){
+    .logo{
+        position: absolute;
+        left: 0;
+        top: 0;
+    }
+    .navbar{
+        position: fixed;
+        width: 35vw;
+        background-color: #661fd6;
+        top: 0;
+        right: 0;
+        height: 100vh;
+        display: block;
+        transition: 0.5s;
+        transform: translate(100%,0);
+    }
+    .navbar .openNav{
+        display: block;
+        position: absolute;
+        right: 100%;
+        top: 0;
+        width: 30px;
+        height: 30px;
+        background-color: #2b043577;
+        padding: 10px
+    }
+    .navbar .openNav span{
+        display: block;
+        background-color: #000;
+        width: 30px;
+        height: 3px;
+        margin: 5px 0;
+        transition: 1s;
+    }
+    .navbar:has(input[name="openNav"]:checked){
+        transform: translate(0,0);
+    }
+    .navbar:has(input[name="openNav"]:checked) .openNav span:nth-child(2){
+        opacity: 0;
+        transition: 0s;
+    }
+    .navbar:has(input[name="openNav"]:checked) .openNav span:nth-child(1){
+        transform: rotate(45deg) translate(6px, 5px);
+    }
+    .navbar:has(input[name="openNav"]:checked) .openNav span:nth-child(3){
+        transform: rotate(-45deg) translate(6px, -5px);
+    }
+    input[name="openNav"]{
+        display: none;
+    }
+    .navbar li{
+        display: block;
+        position: unset;
+        border-bottom: 2px solid #2b043577;
+        font-weight: 500;
+    }
+    .navbar .otheroption,
+    .navbar .menu{
+        width: 100%;
+        text-align: center;
+    }
+    .navbar .menu li:hover{
+        background-color: unset!important;
+        border-bottom: 5px solid #d220e9;
+    }
 }
